Hooks are now simpler to use but also more powerful.
In particular, handlers can be typed and composed.
See the manual for examples.

- Link hints: Add fuzzy-completion over titles and URLs.

- New =--eval= command line argument.

- New delete-all-buffers command.

- Open directories, music and videos directly from Next.

- VCS: More checks and notifications.

- Complete search-engine names with Tab.

- Display package in =execute-command= candidate list.

- New =+platform-port-command+= global.

- More minibuffer default bindings.
  Bind =C-Right=, =C-Left=, =Home=, =End= in the minibuffer.

- Remove history duplicates.

- Scroll page with an offset by default.

  Offset is configurable in the =page-scroll-ratio= buffer slot.
- New command line parameter =--session= to skip loading the previous session.

- Password manager fixes. (Thanks to Rune Juhl Jacobsen.)

- Bug fixes.

  - Don't reload page when there is no history change.

  - Omit extra space in search engine queries.

  - Show if new or current buffer in =set-url= prompt (Thanks to Rune Juhl
    Jacobsen).

  - Fix minibuffer performance hog.

  - Fix element hint performance.

  - Buttons hints can now be followed.

  - Fix element hint rendered offscreen on a scaled display.

** DONE 1.3.4

- Display number of (marked) candidates in minibuffer.

- Improve fuzzy search performance and relevance.

- Swap =C-x k= and =C-x C-k= bindings to match Emacs' behaviour.

- Fix platform port lookup failure on startup when looked up in PATH.

- Fix *default-hostlist* path in pre-compiled binaries.

- Fix compound tags lookup for bookmarks.

- Fix history update on Javascript-loaded pages (e.g. GitHub).

** DONE 1.3.3
- Select multiple candidates in minibuffer
  The default bindings are:

  - =C-SPACE= to toggle the mark of an entry,

  - =M-a= to mark all visible entries,

  - =M-u= to unmark all visible entries.

- Extend bookmark support.
