@@ -186,7 +186,6 @@ section) of the current page and jump to it.")
 matching current URL.")
     (:li (command-markup 'open-file) ", " (command-markup 'download-open-file)
          ": Open file in Next or externally.  See `*open-file-function*'.")
-    (:li (command-markup 'download-video) ": Download video at current URL.")
     (:li (command-markup 'quit) ": Close all Next windows and quit."))
 
    (:h2 "The Next Help System")
